# course_work2.0

./: main.py  pyproject.toml
src/: api.py  file_worker.py  vacancy.py
tests/: conftest.py  test_vacancy.py
